third_party/cronet/cronet.idl_c.h

typedef const char* Cronet_String;
typedef struct Cronet_QuicHint Cronet_QuicHint;
typedef struct Cronet_QuicHint* Cronet_QuicHintPtr;
typedef struct Cronet_EngineParams Cronet_EngineParams;
typedef struct Cronet_EngineParams* Cronet_EngineParamsPtr;
typedef struct Cronet_HttpHeader Cronet_HttpHeader;
typedef struct Cronet_HttpHeader* Cronet_HttpHeaderPtr;
typedef struct Cronet_UrlResponseInfo Cronet_UrlResponseInfo;
typedef struct Cronet_UrlResponseInfo* Cronet_UrlResponseInfoPtr;
typedef struct Cronet_UrlRequestParams Cronet_UrlRequestParams;
typedef struct Cronet_UrlRequestParams* Cronet_UrlRequestParamsPtr;
typedef enum Cronet_EngineParams_HTTP_CACHE_MODE {
  Cronet_EngineParams_HTTP_CACHE_MODE_DISABLED = 0,
  Cronet_EngineParams_HTTP_CACHE_MODE_IN_MEMORY = 1,
  Cronet_EngineParams_HTTP_CACHE_MODE_DISK_NO_HTTP = 2,
  Cronet_EngineParams_HTTP_CACHE_MODE_DISK = 3,
} Cronet_EngineParams_HTTP_CACHE_MODE;
CRONET_EXPORT void Cronet_EngineParams_Destroy(Cronet_EngineParamsPtr self);
// Cronet_EngineParams setters.
CRONET_EXPORT
void Cronet_EngineParams_enable_check_result_set(
    Cronet_EngineParamsPtr self,
    const bool enable_check_result);
CRONET_EXPORT
void Cronet_EngineParams_user_agent_set(Cronet_EngineParamsPtr self,
                                        const Cronet_String user_agent);
CRONET_EXPORT
void Cronet_EngineParams_accept_language_set(
    Cronet_EngineParamsPtr self,
    const Cronet_String accept_language);
CRONET_EXPORT
void Cronet_EngineParams_storage_path_set(Cronet_EngineParamsPtr self,
                                          const Cronet_String storage_path);
CRONET_EXPORT
void Cronet_EngineParams_enable_quic_set(Cronet_EngineParamsPtr self,
                                         const bool enable_quic);
CRONET_EXPORT
void Cronet_EngineParams_enable_http2_set(Cronet_EngineParamsPtr self,
                                          const bool enable_http2);
CRONET_EXPORT
void Cronet_EngineParams_enable_brotli_set(Cronet_EngineParamsPtr self,
                                           const bool enable_brotli);
CRONET_EXPORT
void Cronet_EngineParams_http_cache_mode_set(
    Cronet_EngineParamsPtr self,
    const Cronet_EngineParams_HTTP_CACHE_MODE http_cache_mode);
CRONET_EXPORT
void Cronet_EngineParams_http_cache_max_size_set(
    Cronet_EngineParamsPtr self,
    const int64_t http_cache_max_size);
CRONET_EXPORT
void Cronet_EngineParams_quic_hints_add(Cronet_EngineParamsPtr self,
                                        const Cronet_QuicHintPtr element);
// CRONET_EXPORT
// void Cronet_EngineParams_public_key_pins_add(
//     Cronet_EngineParamsPtr self,
//     const Cronet_PublicKeyPinsPtr element);
// CRONET_EXPORT
// void Cronet_EngineParams_enable_public_key_pinning_bypass_for_local_trust_anchors_set(
//     Cronet_EngineParamsPtr self,
//     const bool enable_public_key_pinning_bypass_for_local_trust_anchors);
// CRONET_EXPORT
// void Cronet_EngineParams_network_thread_priority_set(
//     Cronet_EngineParamsPtr self,
//     const double network_thread_priority);
// CRONET_EXPORT
// void Cronet_EngineParams_experimental_options_set(
//     Cronet_EngineParamsPtr self,
//     const Cronet_String experimental_options);
// // Cronet_EngineParams getters.
// CRONET_EXPORT
// bool Cronet_EngineParams_enable_check_result_get(
//     const Cronet_EngineParamsPtr self);
// CRONET_EXPORT
// Cronet_String Cronet_EngineParams_user_agent_get(
//     const Cronet_EngineParamsPtr self);
// CRONET_EXPORT
// Cronet_String Cronet_EngineParams_accept_language_get(
//     const Cronet_EngineParamsPtr self);
// CRONET_EXPORT
// Cronet_String Cronet_EngineParams_storage_path_get(
//     const Cronet_EngineParamsPtr self);
// CRONET_EXPORT
// bool Cronet_EngineParams_enable_quic_get(const Cronet_EngineParamsPtr self);
// CRONET_EXPORT
// bool Cronet_EngineParams_enable_http2_get(const Cronet_EngineParamsPtr self);
// CRONET_EXPORT
// bool Cronet_EngineParams_enable_brotli_get(const Cronet_EngineParamsPtr self);
// CRONET_EXPORT
// Cronet_EngineParams_HTTP_CACHE_MODE Cronet_EngineParams_http_cache_mode_get(
//     const Cronet_EngineParamsPtr self);
// CRONET_EXPORT
// int64_t Cronet_EngineParams_http_cache_max_size_get(
//     const Cronet_EngineParamsPtr self);
// CRONET_EXPORT
// uint32_t Cronet_EngineParams_quic_hints_size(const Cronet_EngineParamsPtr self);
// CRONET_EXPORT
// Cronet_QuicHintPtr Cronet_EngineParams_quic_hints_at(
//     const Cronet_EngineParamsPtr self,
//     uint32_t index);
// CRONET_EXPORT
// void Cronet_EngineParams_quic_hints_clear(Cronet_EngineParamsPtr self);
// CRONET_EXPORT
// uint32_t Cronet_EngineParams_public_key_pins_size(
//     const Cronet_EngineParamsPtr self);
// CRONET_EXPORT
// Cronet_PublicKeyPinsPtr Cronet_EngineParams_public_key_pins_at(
//     const Cronet_EngineParamsPtr self,
//     uint32_t index);
// CRONET_EXPORT
// void Cronet_EngineParams_public_key_pins_clear(Cronet_EngineParamsPtr self);
// CRONET_EXPORT
// bool Cronet_EngineParams_enable_public_key_pinning_bypass_for_local_trust_anchors_get(
//     const Cronet_EngineParamsPtr self);
// CRONET_EXPORT
// double Cronet_EngineParams_network_thread_priority_get(
//     const Cronet_EngineParamsPtr self);
// CRONET_EXPORT
// Cronet_String Cronet_EngineParams_experimental_options_get(
//     const Cronet_EngineParamsPtr self);

///////////////////////
// Struct Cronet_HttpHeader.
CRONET_EXPORT Cronet_HttpHeaderPtr Cronet_HttpHeader_Create(void);
CRONET_EXPORT void Cronet_HttpHeader_Destroy(Cronet_HttpHeaderPtr self);
// Cronet_HttpHeader setters.
CRONET_EXPORT
void Cronet_HttpHeader_name_set(Cronet_HttpHeaderPtr self,
                                const Cronet_String name);
CRONET_EXPORT
void Cronet_HttpHeader_value_set(Cronet_HttpHeaderPtr self,
                                 const Cronet_String value);
// // Cronet_HttpHeader getters.
// CRONET_EXPORT
// Cronet_String Cronet_HttpHeader_name_get(const Cronet_HttpHeaderPtr self);
// CRONET_EXPORT
// Cronet_String Cronet_HttpHeader_value_get(const Cronet_HttpHeaderPtr self);

// ///////////////////////
// // Struct Cronet_UrlResponseInfo.
// CRONET_EXPORT Cronet_UrlResponseInfoPtr Cronet_UrlResponseInfo_Create(void);
// CRONET_EXPORT void Cronet_UrlResponseInfo_Destroy(
//     Cronet_UrlResponseInfoPtr self);
// // Cronet_UrlResponseInfo setters.
// CRONET_EXPORT
// void Cronet_UrlResponseInfo_url_set(Cronet_UrlResponseInfoPtr self,
//                                     const Cronet_String url);
// CRONET_EXPORT
// void Cronet_UrlResponseInfo_url_chain_add(Cronet_UrlResponseInfoPtr self,
//                                           const Cronet_String element);
// CRONET_EXPORT
// void Cronet_UrlResponseInfo_http_status_code_set(
//     Cronet_UrlResponseInfoPtr self,
//     const int32_t http_status_code);
// CRONET_EXPORT
// void Cronet_UrlResponseInfo_http_status_text_set(
//     Cronet_UrlResponseInfoPtr self,
//     const Cronet_String http_status_text);
// CRONET_EXPORT
// void Cronet_UrlResponseInfo_all_headers_list_add(
//     Cronet_UrlResponseInfoPtr self,
//     const Cronet_HttpHeaderPtr element);
// CRONET_EXPORT
// void Cronet_UrlResponseInfo_was_cached_set(Cronet_UrlResponseInfoPtr self,
//                                            const bool was_cached);
// CRONET_EXPORT
// void Cronet_UrlResponseInfo_negotiated_protocol_set(
//     Cronet_UrlResponseInfoPtr self,
//     const Cronet_String negotiated_protocol);
// CRONET_EXPORT
// void Cronet_UrlResponseInfo_proxy_server_set(Cronet_UrlResponseInfoPtr self,
//                                              const Cronet_String proxy_server);
// CRONET_EXPORT
// void Cronet_UrlResponseInfo_received_byte_count_set(
//     Cronet_UrlResponseInfoPtr self,
//     const int64_t received_byte_count);
// // Cronet_UrlResponseInfo getters.
// CRONET_EXPORT
// Cronet_String Cronet_UrlResponseInfo_url_get(
//     const Cronet_UrlResponseInfoPtr self);
// CRONET_EXPORT
// uint32_t Cronet_UrlResponseInfo_url_chain_size(
//     const Cronet_UrlResponseInfoPtr self);
// CRONET_EXPORT
// Cronet_String Cronet_UrlResponseInfo_url_chain_at(
//     const Cronet_UrlResponseInfoPtr self,
//     uint32_t index);
// CRONET_EXPORT
// void Cronet_UrlResponseInfo_url_chain_clear(Cronet_UrlResponseInfoPtr self);
CRONET_EXPORT
int32_t Cronet_UrlResponseInfo_http_status_code_get(
    const Cronet_UrlResponseInfoPtr self);
CRONET_EXPORT
Cronet_String Cronet_UrlResponseInfo_http_status_text_get(
    const Cronet_UrlResponseInfoPtr self);
// CRONET_EXPORT
// uint32_t Cronet_UrlResponseInfo_all_headers_list_size(
//     const Cronet_UrlResponseInfoPtr self);
// CRONET_EXPORT
// Cronet_HttpHeaderPtr Cronet_UrlResponseInfo_all_headers_list_at(
//     const Cronet_UrlResponseInfoPtr self,
//     uint32_t index);
// CRONET_EXPORT
// void Cronet_UrlResponseInfo_all_headers_list_clear(
//     Cronet_UrlResponseInfoPtr self);
// CRONET_EXPORT
// bool Cronet_UrlResponseInfo_was_cached_get(
//     const Cronet_UrlResponseInfoPtr self);
// CRONET_EXPORT
// Cronet_String Cronet_UrlResponseInfo_negotiated_protocol_get(
//     const Cronet_UrlResponseInfoPtr self);
// CRONET_EXPORT
// Cronet_String Cronet_UrlResponseInfo_proxy_server_get(
//     const Cronet_UrlResponseInfoPtr self);
// CRONET_EXPORT
// int64_t Cronet_UrlResponseInfo_received_byte_count_get(
//     const Cronet_UrlResponseInfoPtr self);

///////////////////////
// Struct Cronet_UrlRequestParams.
CRONET_EXPORT Cronet_UrlRequestParamsPtr Cronet_UrlRequestParams_Create(void);
CRONET_EXPORT void Cronet_UrlRequestParams_Destroy(
    Cronet_UrlRequestParamsPtr self);
// Cronet_UrlRequestParams setters.
CRONET_EXPORT
void Cronet_UrlRequestParams_http_method_set(Cronet_UrlRequestParamsPtr self,
                                             const Cronet_String http_method);